--- a/demo/challenge.html
+++ b/demo/challenge.html
@@ -66,7 +66,7 @@
    */
   function main() {
 
-    var lastResult;
+    var lastResult;/'
     $.each($('#content').children(), function (index, row) {
       // TODO consider more robust exclusion of 'data' divs
       var row_text = row.innerText.trim();
